--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.carbonlake</groupId>
+    <groupId>io.carbonlake.aisql</groupId>
     <artifactId>aisql-parent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -20,30 +20,6 @@
       <artifactId>carbondata-spark2</artifactId>
       <version>${carbondata.version}</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.apache.carbondata</groupId>-->
-<!--      <artifactId>fleet-job</artifactId>-->
-<!--      <version>${project.version}</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>com.huaweicloud</groupId>-->
-<!--      <artifactId>esdk-obs-java</artifactId>-->
-<!--      <version>3.1.3</version>-->
-<!--      <exclusions>-->
-<!--        <exclusion>-->
-<!--          <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>com.squareup.okhttp3</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.apache.logging.log4j</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--      </exclusions>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
