--- a/hwcloud/pom.xml
+++ b/hwcloud/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.carbonlake</groupId>
+    <groupId>io.carbonlake.aisql</groupId>
     <artifactId>aisql-parent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -19,11 +19,6 @@
   </properties>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>org.apache.carbondata</groupId>-->
-<!--      <artifactId>carbondata-streaming</artifactId>-->
-<!--      <version>${carbondata.version}</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>io.carbonlake</groupId>
       <artifactId>aisql-core</artifactId>
