--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.carbonlake</groupId>
+  <groupId>io.carbonlake.aisql</groupId>
   <artifactId>aisql-parent</artifactId>
   <name> AISQL :: Parent</name>
   <packaging>pom</packaging>
